Bug 324011, initMouseEvent does not set relatedTarget property, r+sr=jst